--- a/TypeScriptExamples2/TypeScriptExamples2.csproj
+++ b/TypeScriptExamples2/TypeScriptExamples2.csproj
@@ -28,6 +28,7 @@
     <Content Include="DataExamples\Books.js">
       <DependentUpon>Books.ts</DependentUpon>
     </Content>
+    <Content Include="HtmlScratch.html" />
     <Content Include="ie9.js">
       <DependentUpon>ie9.ts</DependentUpon>
     </Content>
